<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_album_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/view_album_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_image_description"
        android:scaleType="fitCenter"
        android:src="@drawable/item_album" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/view_album_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/list_item_main_text"
            android:text="@string/album_default_name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/view_album_item_artist"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/list_item_sub_text"
                android:text="@string/artist_default_name"
                />

            <TextView
                android:id="@+id/view_album_item_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/list_item_sub_text"
                android:text="@string/year_default"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>